:art: improve structure

--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Marshall</title>
   </head>
   <body>
     <main>
       <div class="left">
         <div class="left-top">
-          <img src="assets/marshall_logo.png" alt="marshall_logo" />
+          <img
+            class="logo"
+            src="assets/marshall_logo.png"
+            alt="marshall_logo"
+          />
         </div>
         <div class="left-middle">
-          <h3>Discover</h3>
-          <h1>Major IV</h1>
+          <p class="subtitle">Discover</p>
+          <h1 class="title">Major IV</h1>
         </div>
         <div class="left-down">
           <img src="assets/marshall_arrow_left.png" alt="marshall_arrow_left" />
@@ -31,7 +35,7 @@
       </div>
       <div class="right">
         <div class="right-top">
-          <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">
+          <a>
             <img
               src="assets/marshall_button_play.png"
               alt="marshall_button_play"
@@ -39,8 +43,8 @@
           </a>
         </div>
         <div class="right-down">
-          <h3>VIEW ALL PRODUCTS</h3>
-          <h1>Build your own wall of sound.</h1>
+          <h4 class="first-text">VIEW ALL PRODUCTS</h4>
+          <h2 class="second-text">Build your own wall of sound.</h2>
         </div>
       </div>
     </main>
